--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="fila-dinero">
             <div class="izquierda">
                 <h1>Dinero disponible</h1>
-                <p>$***</p>
-                <h2>$*** a liquidar</h2>
+                <h2>$***</h2>
+                <p>$*** a liquidar</p>
             </div>
             <div class="derecha">
                 <button class="btn-info">Tu CVU</button>
